@@ -4827,3 +4827,5 @@
          w5100.c,w5100_socket.c},spectranet.c},ui.c,ui/{sdl/sdldisplay.c,
          widget/{filesel.c,pokemem.c}}: avoid mixing declarations and code for
          C89 compilers (Adrien Destugues).
+20150513 peripherals/disk/wd_fdc.[ch]: add WD2797 non-IBM sector sizes (addition
+         to patch #330) (Gergely Szasz).
